2004-09-20  Ilja Booij  <ilja@ic-s.nl>

	* pool.c (child_reg_disconnected): trace message to TRACE_DEBUG
	level.
	(child_reg_connected): trace message to TRACE_DEBUG level.
	(scoreboard_delete): tries to remove SCOREBOARD_LOCK_FILE when
	shutting down.
	(scoreboard_new): no longer allocates unused (and un-freed) memory.

	* config.c (ReadConfig): added missing my_free() statements.
	(config_free): added a statement to free global config list.
	(GetDBParams): changed so it's possible to set a table prefix
	of "".
	(GetConfigValue): now returns 1 if config value is found. 0 otherwise.

2004-09-17  Ilja Booij  <ilja@ic-s.nl>

	* db.c (db_list_mailboxes_by_regex): Fixed queries. I fscked them
	up in the changes make on 2004-09-14. They work now!
	(db_get_msgflag): fixed error with table prefix.

2004-09-16  Ilja Booij  <ilja@ic-s.nl>

	* man/dbmail-util.8: commented out -n and -y switches docs.

	* maintenance.c (main): disabled -n and -y switches.

	* man/dbmail-users.8: commented out -n and -y switches docs.

	* user.c: disabled -n and -y switche.

	* db.c (db_get_msgdate): fixed error in query. Strings were in the
	wrong order, causing a weird query.

	* imaputil.c (date_sql2imap): add daylight savings time information.
	(retrieve_structure): fixed white issue in IMAP output.

2004-09-15  Ilja Booij  <ilja@ic-s.nl>

	* INSTALL.postfix: host -> hosts in postfix-mysql config.

2004-09-15  Paul Stevens <paul@nfg.nl>

	* db.c, db.h, dbmsgbuf.c, dbmsgbuf.h, pipe.c, rfcmsg.c,
	smtp-convert.c: start using the is_header field during message
	insertion.

2004-09-15  Paul Stevens <paul@nfg.nl>

	* config.c, db.c, dbmail.conf, dbmail.h, dbmsgbuf.c, dbsearch.c,
	mysql/dbmysql.c, pgsql/dbpgsql.c: adding dynamic table prefixes by
	Leif Jackson.
	
2004-09-15  Ilja Booij  <ilja@ic-s.nl>

	* db.c (db_set_deleted): removed db_free_result() call that shouldn't
	have been there.
	(db_imap_append_msg): removed db_free_result() call that shouldn't
	have been there.